@@ -1,3 +1,7 @@
+2010-01-01  Robert Millan  <rmh.grub@aybabtu.com>  (tiny change)
+
+	* util/gendocs.sh: use `set -e'.
+
 2009-12-13  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (Image Syntax): mention convention for installing
